--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up JDK 21
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
+        distribution: 'temurin' 
         java-version: '21'
 
     - name: Build with Gradle
