--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,18 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+    - name: Get short SHA
+      id: vars
+      run: echo "GIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
     - name: Build Docker image
-      run: docker build -t yny.ocir.io/ax0ijnvub7pp/adg:latest .
+      run: docker build -t yny.ocir.io/ax0ijnvub7pp/adg:${{ env.GIT_SHA }} .
 
     - name: Login to Oracle Container Registry
       run: echo ${{ secrets.OCI_REGISTRY_PASSWORD }} | docker login yny.ocir.io -u ${{ secrets.OCI_REGISTRY_USERNAME }} --password-stdin
 
     - name: Push Docker image to Oracle Container Registry
-      run: docker push yny.ocir.io/ax0ijnvub7pp/adg:latest
+      run: docker push yny.ocir.io/ax0ijnvub7pp/adg:${{ env.GIT_SHA }}
 
     - name: Deploy to Server
       uses: appleboy/ssh-action@master
