--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,16 @@ jobs:
       id: vars
       run: echo "GIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       
-    - name: Build Docker image
-      run: docker build -t yny.ocir.io/ax0ijnvub7pp/adg:${{ env.GIT_SHA }} .
+    - name: Build Docker image with GIT_SHA tag
+      run: docker build -t yny.ocir.io/ax0ijnvub7pp/adg:${{ env.GIT_SHA }} -t yny.ocir.io/ax0ijnvub7pp/adg:latest .
 
     - name: Login to Oracle Container Registry
       run: echo ${{ secrets.OCI_REGISTRY_PASSWORD }} | docker login yny.ocir.io -u ${{ secrets.OCI_REGISTRY_USERNAME }} --password-stdin
 
-    - name: Push Docker image to Oracle Container Registry
+    - name: Push Docker image with GIT_SHA tag
+      run: docker push yny.ocir.io/ax0ijnvub7pp/adg:${{ env.GIT_SHA }}
+
+    - name: Push Docker image with latest tag
       run: docker push yny.ocir.io/ax0ijnvub7pp/adg:latest
 
     - name: Deploy to Server
