--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,18 +25,21 @@ jobs:
     - name: Get short SHA
       id: vars
       run: echo "GIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-      
-    - name: Build Docker image with GIT_SHA tag
-      run: docker build -t yny.ocir.io/ax0ijnvub7pp/adg:${{ env.GIT_SHA }} -t yny.ocir.io/ax0ijnvub7pp/adg:latest .
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      with:
+        platforms: arm64, amd64
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+      
     - name: Login to Oracle Container Registry
       run: echo ${{ secrets.OCI_REGISTRY_PASSWORD }} | docker login yny.ocir.io -u ${{ secrets.OCI_REGISTRY_USERNAME }} --password-stdin
 
-    - name: Push Docker image with GIT_SHA tag
-      run: docker push yny.ocir.io/ax0ijnvub7pp/adg:${{ env.GIT_SHA }}
-
-    - name: Push Docker image with latest tag
-      run: docker push yny.ocir.io/ax0ijnvub7pp/adg:latest
+    - name: Build and push Docker image
+      run: |
+        docker buildx build --platform linux/amd64,linux/arm64 -t yny.ocir.io/ax0ijnvub7pp/adg:${{ env.GIT_SHA }} -t yny.ocir.io/ax0ijnvub7pp/adg:latest --push .
 
     - name: Deploy to Server
       uses: appleboy/ssh-action@master
