--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,19 +37,6 @@ jobs:
     - name: Login to Oracle Container Registry
       run: echo ${{ secrets.OCI_REGISTRY_PASSWORD }} | docker login yny.ocir.io -u ${{ secrets.OCI_REGISTRY_USERNAME }} --password-stdin
 
-    - name: Delete existing latest image
-      run: |
-        COMPARTMENT_ID="${{ secrets.OCI_COMPARTMENT_ID }}"
-        REPOSITORY_NAME="adg"
-        IMAGE_TAG="latest"
-        IMAGE_OCID=$(oci artifacts container image list \
-            --compartment-id $COMPARTMENT_ID \
-            --repository-name $REPOSITORY_NAME \
-            --output json | jq -r --arg tag "$IMAGE_TAG" '.data.items[] | select(.tags | index($tag)) | .id')
-        if [ -n "$IMAGE_OCID" ]; then
-            oci artifacts container image delete --image-id "$IMAGE_OCID" --force
-        fi
-
     - name: Build and push Docker image
       run: |
         docker buildx build --platform linux/amd64,linux/arm64 -t yny.ocir.io/ax0ijnvub7pp/adg:${{ env.GIT_SHA }} -t yny.ocir.io/ax0ijnvub7pp/adg:latest --push .
@@ -66,6 +53,7 @@ jobs:
           if [ "$(sudo docker ps -q -f name=adg)" ]; then
             sudo docker stop adg
             sudo docker rm adg
+            sudo docker rmi yny.ocir.io/ax0ijnvub7pp/adg:latest
           fi
 
           sudo docker pull yny.ocir.io/ax0ijnvub7pp/adg:latest
